--- a/.github/workflows/compile-resume.yml
+++ b/.github/workflows/compile-resume.yml
@@ -2,48 +2,50 @@ name: Compile LaTeX Resume
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
     paths:
-      - 'dmitri_manajev.tex'
-      - 'Makefile'
-      - '.github/workflows/compile-resume.yml'
+      - "dmitri_manajev.tex"
+      - "Makefile"
+      - ".github/workflows/compile-resume.yml"
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
     paths:
-      - 'dmitri_manajev.tex'
-      - 'Makefile'
-      - '.github/workflows/compile-resume.yml'
+      - "dmitri_manajev.tex"
+      - "Makefile"
+      - ".github/workflows/compile-resume.yml"
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Install LaTeX
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
+      - name: Install LaTeX
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
 
-    - name: Compile Resume
-      run: make
+      - name: Compile Resume
+        run: make
 
-    - name: Upload PDF as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: Dmitri_Manajev_RL_Robotics_Resume_2025
-        path: Dmitri_Manajev_RL_Robotics_Resume_2025.pdf
-        if-no-files-found: error
-        retention-days: 90
+      - name: Upload PDF as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Dmitri_Manajev_RL_Robotics_Resume_2025
+          path: Dmitri_Manajev_RL_Robotics_Resume_2025.pdf
+          if-no-files-found: error
+          retention-days: 90
 
-    - name: Create Release (on tag)
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: Dmitri_Manajev_RL_Robotics_Resume_2025.pdf
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: Create Release (on tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: Dmitri_Manajev_RL_Robotics_Resume_2025.pdf
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
